--- a/A_Pumpkins_Delirium.html
+++ b/A_Pumpkins_Delirium.html
@@ -43,77 +43,77 @@
         </div>
         <span class="mainstoryTitle">A Pumpkin's Delirium</span>
         <p>
-           The orange pumpkin laughed degradingly at himself.<br><br> 
+           The orange pumpkin laughed degradingly at himself.<br><br>
 
-           It was early evening on Halloween night, and he sat all alone on a brick doorstep, 
-           watching the clouds roll by with their hues of ominous gray. The wind was chilly, 
-           and he shivered at the thought of the horrible wrong that’d been done to him. The 
+           It was early evening on Halloween night, and he sat all alone on a brick doorstep,
+           watching the clouds roll by with their hues of ominous gray. The wind was chilly,
+           and he shivered at the thought of the horrible wrong that'd been done to him. The
            knowledge was painful, but the experience had been far worse. And he had scars to prove it.<br><br>
 
-           “Bah humbug,” he said. His words were crisp on the frigid air.<br><br>
+           "Bah humbug," he said. His words were crisp on the frigid air.<br><br>
 
-           He liked how it sounded—talking out loud to himself. He continued on.<br><br>
+           He liked how it sounded&#8212;talking out loud to himself. He continued on.<br><br>
 
-           “. . . She abducted me from my family . . .”<br><br>
+           ". . . She abducted me from my family . . ."<br><br>
 
-           He thought of his patch and all the pumpkins there: his family. They started out as 
-           seedlings in the dirt, and he grew up next to Tom, his best friend. They did everything 
-           together—counting crows flying by in the sky, watching leaves fall, and spending time in 
+           He thought of his patch and all the pumpkins there: his family. They started out as
+           seedlings in the dirt, and he grew up next to Tom, his best friend. They did everything
+           together&#8212;counting crows flying by in the sky, watching leaves fall, and spending time in
            the company of all their brothers and sisters. But now it was all over. And sadness enveloped him.<br><br>
 
-           Flashes of a cruel beast bombarded his mind: a little girl, her hands on his stem, the 
-           searing pain as she ripped him from his vine . . . and the sound of her carefree voice as 
+           Flashes of a cruel beast bombarded his mind: a little girl, her hands on his stem, the
+           searing pain as she ripped him from his vine . . . and the sound of her carefree voice as
            she suggested turning him into a pie.<br><br>
 
            Oh my, OH MY!<br><br>
 
-           Reliving this nightmare was too much! He hyperventilated in the cool air, but even its chill 
-           wasn’t enough to restrain the excited delirium growing inside him. His head felt hot, and it 
-           wasn’t because of the lighted candle inside him.<br>
+           Reliving this nightmare was too much! He hyperventilated in the cool air, but even its chill
+           wasn't enough to restrain the excited delirium growing inside him. His head felt hot, and it
+           wasn't because of the lighted candle inside him.<br>
            Madness took over, and from that point on he was a simple lunatic.<br><br>
 
-           Laughter poured from his poorly cut mouth. And his voice dripped with perverted insanity. 
-           “She carved my face . . . she mutilated by body . . . she took my guts out . . .”<br><br>
+           Laughter poured from his poorly cut mouth. And his voice dripped with perverted insanity.
+           "She carved my face . . . she mutilated by body . . . she took my guts out . . ."<br><br>
 
-           A nearby squirrel preparing for her evening meal dropped her hickory nut in shock. What a 
-           creepy pumpkin, she thought. She surveyed him warily: equilateral eyes, a triangular nose, 
-           and a sexily lacerated mouth. Nut-almighty! The pumpkin was hot and not just because of the 
+           A nearby squirrel preparing for her evening meal dropped her hickory nut in shock. What a
+           creepy pumpkin, she thought. She surveyed him warily: equilateral eyes, a triangular nose,
+           and a sexily lacerated mouth. Nut-almighty! The pumpkin was hot and not just because of the
            candlelight burning within him!<br><br>
 
            The boisterous pumpkin laughed some more. He reveled in his masochistic ways.<br>
            Giggling, chortling, and raving about the pain a little girl had inflicted upon him.<br><br>
 
-           Soon children came to trick-or-treat dressed as goblins, fairies, crayons, and little devils. 
+           Soon children came to trick-or-treat dressed as goblins, fairies, crayons, and little devils.
            As each little kid walked up to the doorstep, the pumpkin whispered words of madness.<br><br>
 
-           “. . . fate of the vine . . .” he told the princess.<br>
+           ". . . fate of the vine . . ." he told the princess.<br>
            His breath on the wind sounded like a ghost, and the little girl shivered with fear.<br><br>
 
-           Next came a zebra, to whom he said, “ . . . pie maketh me not . . .”<br>
-           The little kid’s stomach grumbled with hunger, so she reached into her bag and ate a Twizzlers candy.<br><br>
+           Next came a zebra, to whom he said, ". . . pie maketh me not . . ."<br>
+           The little kid's stomach grumbled with hunger, so she reached into her bag and ate a Twizzlers candy.<br><br>
 
-           When the warlock came, he took special notice of the orange pumpkin. The little boy picked up the 
-           pumpkin with both hands and smiled evilly. Inspired by video games, he decided to destroy the pumpkin 
+           When the warlock came, he took special notice of the orange pumpkin. The little boy picked up the
+           pumpkin with both hands and smiled evilly. Inspired by video games, he decided to destroy the pumpkin
            and see what magic lay therein.<br><br>
 
            That insane orange pumpkin had no warning.<br>
-           Nor did the ogling squirrel who’d been watching the pumpkin from her perch in the hickory tree.<br><br>
+           Nor did the ogling squirrel who'd been watching the pumpkin from her perch in the hickory tree.<br><br>
 
-           Down . . . down the pumpkin went, propelled by the warlock’s hands and pulled down by gravity.<br><br>
+           Down . . . down the pumpkin went, propelled by the warlock's hands and pulled down by gravity.<br><br>
 
            CRACK!<br><br>
 
            Orange was everywhere.<br><br>
-          
+
            Hunks . . . chunks . . . of pumpkin carcass lay on the porch.<br><br>
 
            The warlock had murdered the orange pumpkin.<br><br>
 
-           Like Humpty Dumpty, the pumpkin could not be put back together again. The squirrel from the tree 
-           looked on in horror, her heart momentarily broken. But after 3.5 seconds, she decided there were 
+           Like Humpty Dumpty, the pumpkin could not be put back together again. The squirrel from the tree
+           looked on in horror, her heart momentarily broken. But after 3.5 seconds, she decided there were
            plenty of nuts in the world, and it would be easy to fantasize over a new one in the area. Go figure!<br><br>
 
-           Thus ends the story of an insane orange pumpkin and a squirrel’s perverted lust.
+           Thus ends the story of an insane orange pumpkin and a squirrel's perverted lust.
          </p>
        </div>
      </div>
@@ -247,7 +247,7 @@
      <footer>
        <div>
          <span>@inkyfawn</span>
-         <p>Last Updated: January 3, 2019</p>
+         <p>Last Updated: February 28, 2019</p>
          <a target="_blank" title="@inkyfawn" href="http://www.instagram.com/inkyfawn"><img alt="@inkyfawn" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
        </div>
      </footer>
