--- a/Strange_Attraction.html
+++ b/Strange_Attraction.html
@@ -427,14 +427,14 @@
        </div>
        <div class="story" id="pumpkinsDelirium">
          <a href="A_Pumpkins_Delirium.html"><span>A Pumpkin's Delirium</span></a><br>
-         <p>The orange pumpkin laughed degradingly at himself.<br><br> 
-           It was early evening on Halloween night, and he sat all alone on a brick doorstep, 
-           watching the clouds roll by with their hues of ominous gray. The wind was chilly, 
-           and he shivered at the thought of the horrible wrong that’d been done to him. The 
+         <p>The orange pumpkin laughed degradingly at himself.<br><br>
+           It was early evening on Halloween night, and he sat all alone on a brick doorstep,
+           watching the clouds roll by with their hues of ominous gray. The wind was chilly,
+           and he shivered at the thought of the horrible wrong that'd been done to him. The
            knowledge was painful, but the experience had been far worse. And he had scars to prove it.<br><br>
-           “Bah humbug,” he said. His words were crisp on the frigid air.<br><br>
-           He liked how it sounded—talking out loud to himself. He continued on.<br><br>
-           “. . . She abducted me from my family . . .”<br><br>
+           "Bah humbug," he said. His words were crisp on the frigid air.<br><br>
+           He liked how it sounded&#8212;talking out loud to himself. He continued on.<br><br>
+           ". . . She abducted me from my family . . ."<br><br>
          (<a href="A_Pumpkins_Delirium.html">read more</a>)</p>
        </div>
        <div class="story" id="marigold">
@@ -484,14 +484,14 @@
        <div>
          <div class="smallerStory" id="pumpkinsDelirium">
            <a href="A_Pumpkins_Delirium.html"><span>A Pumpkin's Delirium</span></a><br>
-           <p>The orange pumpkin laughed degradingly at himself.<br><br> 
-             It was early evening on Halloween night, and he sat all alone on a brick doorstep, 
-             watching the clouds roll by with their hues of ominous gray. The wind was chilly, 
-             and he shivered at the thought of the horrible wrong that’d been done to him. The 
+           <p>The orange pumpkin laughed degradingly at himself.<br><br>
+             It was early evening on Halloween night, and he sat all alone on a brick doorstep,
+             watching the clouds roll by with their hues of ominous gray. The wind was chilly,
+             and he shivered at the thought of the horrible wrong that'd been done to him. The
              knowledge was painful, but the experience had been far worse. And he had scars to prove it.<br><br>
-             “Bah humbug,” he said. His words were crisp on the frigid air.<br><br>
-             He liked how it sounded—talking out loud to himself. He continued on.<br><br>
-             “. . . She abducted me from my family . . .”<br><br>
+             "Bah humbug," he said. His words were crisp on the frigid air.<br><br>
+             He liked how it sounded&#8212;talking out loud to himself. He continued on.<br><br>
+             ". . . She abducted me from my family . . ."<br><br>
            (<a href="A_Pumpkins_Delirium.html">read more</a>)</p>
          </div>
          <div class="smallerStory" id="marigold">
@@ -509,7 +509,7 @@
      <footer>
        <div>
          <span>@inkyfawn</span>
-         <p>Last Updated: January 3, 2019</p>
+         <p>Last Updated: February 28, 2019</p>
          <a target="_blank" title="@inkyfawn" href="http://www.instagram.com/inkyfawn"><img alt="@inkyfawn" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
        </div>
      </footer>
