--- a/Marigold.html
+++ b/Marigold.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="dahliaReset.css" type="text/css">
     <link rel="stylesheet" href="dahlia.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Junge|Raleway|Handlee" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
   </head>
   <body>
     <!-- Menu -->
@@ -185,8 +186,11 @@
     <footer>
       <div>
         <span>@inkyfawn</span>
-        <p>Last Updated: February 28, 2019</p>
-        <a target="_blank" title="@inkyfawn" href="http://www.instagram.com/inkyfawn"><img alt="@inkyfawn" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+        <p>Last Updated: March 2, 2019</p>
+        <span>
+          <a target="_blank" title="@inkyfawn" href="http://www.instagram.com/inkyfawn" class="fab fa-instagram fa-2x"></a>
+          <a target="_blank" title="goodreads" href="https://www.goodreads.com/user/show/6984021-maria" class="fab fa-goodreads fa-2x"></a>
+        </span>
       </div>
     </footer>
   </body>
